--- a/DongGia-master/config.json
+++ b/DongGia-master/config.json
@@ -8,7 +8,9 @@
 		"./bower_components/jquery/dist/jquery.min.js",
 		"./src/plugins/lazysizes.min.js",
 		"./bower_components/swiper/dist/js/swiper.min.js",
-		"./bower_components/isotope-layout/dist/isotope.pkgd.min.js"
+		"./bower_components/isotope-layout/dist/isotope.pkgd.min.js",
+		"./bower_components/bootstrap/dist/js/bootstrap.min.js",
+		"./bower_components/owl.carousel/dist/owl.carousel.min.js"
 	],
 	"globalCss": [
 		"./bower_components/swiper/dist/css/swiper.min.css",
