--- a/DongGia-master/bower.json
+++ b/DongGia-master/bower.json
@@ -26,6 +26,7 @@
     "linearicons": "1.0.1",
     "bootstrap": "4.3.1",
     "isotope-layout": "^3.0.6",
-    "owl.carousel": "^2.3.4"
+    "owl.carousel": "^2.3.4",
+    "lightgallery": "^1.6.12"
   }
 }
