--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -9,6 +9,10 @@
 
   <templatelist xsltname="galleryList.xslt" name="Thư viện ảnh"></templatelist>
 
+  <templatelist xsltname="projectList.xslt" name="Dự án"></templatelist>
+
+  <templatelist xsltname="NewsEventList.xslt" name="Tin tức - Sự kiện"></templatelist>
+
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
   </position>
