--- a/DongGia-master/Xslt/zone/Settings.config
+++ b/DongGia-master/Xslt/zone/Settings.config
@@ -7,6 +7,7 @@
       <add name="Menu footer" value="2" resourcefile="" />
 	  <add name="Menu footer 2" value="4" resourcefile="" />
 	  <add name="Menu Gallery" value="8" resourcefile="" />
+	  <add name="Menu News" value="16" resourcefile="" />
     </position>
 
 </settings>
