--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -13,6 +13,8 @@
 
   <templatelist xsltname="NewsEventList.xslt" name="Tin tức - Sự kiện"></templatelist>
 
+  <templatelist xsltname="FaqsList.xslt" name="FAQs"></templatelist>
+  
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
   </position>
