--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -14,7 +14,8 @@
   <templatelist xsltname="NewsEventList.xslt" name="Tin tức - Sự kiện"></templatelist>
 
   <templatelist xsltname="FaqsList.xslt" name="FAQs"></templatelist>
-  
+
+  <templatelist xsltname="productList.xslt" name="Năng lực thi công"></templatelist>
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
   </position>
