--- a/DongGia-master/Xslt/zone/Settings.config
+++ b/DongGia-master/Xslt/zone/Settings.config
@@ -8,6 +8,7 @@
 	  <add name="Menu footer 2" value="4" resourcefile="" />
 	  <add name="Menu Gallery" value="8" resourcefile="" />
 	  <add name="Menu News" value="16" resourcefile="" />
+	  <add name="Bước Tuyển Dụng" value="32" resourcefile="" />
     </position>
 
 </settings>
