--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -15,7 +15,9 @@
 
   <templatelist xsltname="FaqsList.xslt" name="FAQs"></templatelist>
 
-  <templatelist xsltname="productList.xslt" name="Năng lực thi công"></templatelist>
+  <templatelist xsltname="ability.xslt" name="Năng lực thi công"></templatelist>
+
+  <templatelist xsltname="projected.xslt" name="Dự án đã thực hiện"></templatelist>
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
   </position>
