--- a/DongGia-master/package.json
+++ b/DongGia-master/package.json
@@ -15,6 +15,7 @@
 		"@babel/preset-env": "^7.3.4",
 		"@mdi/font": "^3.5.95",
 		"autoprefixer": "^9.4.3",
+		"bower": "^1.8.8",
 		"browser-sync": "^2.26.3",
 		"css-declaration-sorter": "^4.0.1",
 		"cssnano": "^4.1.8",
