--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -7,6 +7,8 @@
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
 
+  <templatedetail xsltname="projectDetail.xslt" name="Chi tiết dự án"></templatedetail>
+
   <templatelist xsltname="galleryList.xslt" name="Thư viện ảnh"></templatelist>
 
   <templatelist xsltname="projectList.xslt" name="Dự án"></templatelist>
@@ -18,6 +20,8 @@
   <templatelist xsltname="ability.xslt" name="Năng lực thi công"></templatelist>
 
   <templatelist xsltname="projected.xslt" name="Dự án đã thực hiện"></templatelist>
+
+  <templatelist xsltname="project.xslt" name="Dự án con"></templatelist>
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
   </position>
