--- a/DongGia-master/Xslt/zone/Settings.config
+++ b/DongGia-master/Xslt/zone/Settings.config
@@ -9,6 +9,7 @@
 	  <add name="Menu Gallery" value="8" resourcefile="" />
 	  <add name="Menu News" value="16" resourcefile="" />
 	  <add name="Bước Tuyển Dụng" value="32" resourcefile="" />
+	  <add name="Dự án" value="64" resourcefile="" />
     </position>
 
 </settings>
