--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -7,7 +7,9 @@
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
 
-  <templatedetail xsltname="projectDetail.xslt" name="Chi tiết dự án"></templatedetail>
+  <templatedetail xsltname="NewsEventDetail.xslt" name="Chi tiết tin tức"></templatedetail>
+
+  <templatedetail xsltname="recruitDetail.xslt" name="Chi tiết tuyển dụng"></templatedetail>
 
   <templatelist xsltname="galleryList.xslt" name="Thư viện ảnh"></templatelist>
 
