--- a/DongGia-master/Xslt/zone/Settings.config
+++ b/DongGia-master/Xslt/zone/Settings.config
@@ -10,6 +10,7 @@
 	  <add name="Menu News" value="16" resourcefile="" />
 	  <add name="Bước Tuyển Dụng" value="32" resourcefile="" />
 	  <add name="Dự án" value="64" resourcefile="" />
+	  <add name="Dự án chi tiết" value="128" resourcefile="" />
     </position>
 
 </settings>
