--- a/DongGia-master/Xslt/news/Settings.config
+++ b/DongGia-master/Xslt/news/Settings.config
@@ -24,6 +24,8 @@
   <templatelist xsltname="projected.xslt" name="Dự án đã thực hiện"></templatelist>
 
   <templatelist xsltname="project.xslt" name="Dự án con"></templatelist>
+
+  <templatelist xsltname="JobSelect.xslt" name="Vị trí tuyển dụng"></templatelist>
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
   </position>
