--- a/DongGia-master/Xslt/zone/Settings.config
+++ b/DongGia-master/Xslt/zone/Settings.config
@@ -11,6 +11,7 @@
 	  <add name="Bước Tuyển Dụng" value="32" resourcefile="" />
 	  <add name="Dự án" value="64" resourcefile="" />
 	  <add name="Dự án chi tiết" value="128" resourcefile="" />
+	  <add name="Dự án đã thực hiện" value="256" resourcefile="" />
     </position>
 
 </settings>
